examples/good/auto_assignment.latf
auto f(int x) {
    return lambda (int y) -> int {
        return x + y;
    };
}

auto f2(int x) {
    if (x > 0) {
        println("x is positive");
    }
    return lambda (int y) -> int {
        return x - y;
    };
}

int main() {
    auto g = f(1);
    println(g(10));

    g = lambda (int z) -> int . z + 1; // OK
    println(g(10));

    g = f2(-5); // OK
    println(g(10));

    g = f2(5); // OK
    println(g(10));

    g = lambda (int z) -> int . z + 1; // OK
    println(g(10));

    return 0;
}