examples/bad/auto_assignment3.latf
auto f(int x) {
    return lambda (int y) -> int {
        return x + y;
    };
}

int main() {
    auto g = f(-5);

    int x;
    g = lambda (int z) -> bool . z > 0; // error - incompatible types

    return 0;
}